<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Headline"
        android:text="@string/Personal_info" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/First_name" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/inputLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Birthday" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnShowError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Show_error" />

    <Button
        android:id="@+id/btnHideError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Hide_error" />

</LinearLayout>